--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link ref="stylesheet" href="style.css">
   <title>Odin Recipes</title>
 </head>
 
 <body>
-  <h1> Odin Recipes </h1>
+  <h1 class="title"> Odin Recipes </h1>
   <ul>
-    <li> <a href="recipes/chickenparm.html"> Chicken Parmesan </a></li>
-    <li> <a href="recipes/macandcheese.html"> Macaroni and Cheese </a></li>
-    <li> <a href="recipes/lasagna.html"> Lasagna </a></li>
+    <li class="recipe chicken-parm"> <a href="recipes/chickenparm.html"> Chicken Parmesan </a></li>
+    <li class="recipe mac-and-cheese"> <a href="recipes/macandcheese.html"> Macaroni and Cheese </a></li>
+    <li class="recipe lasagna"> <a href="recipes/lasagna.html"> Lasagna </a></li>
   </ul>
 </body>
 </html>
